# Quadrature

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  quadrature.0.2.nupkg  quadrature.0.21.nupkg  quadrature.autopkg  test-conan-package.bat
QuadratureTester/: CMakeLists.txt  QuadratureTester.sln  QuadratureTester.vcxproj  QuadratureTester.vcxproj.filters  conanfile.py  main.cpp  packages.config
QuadratureTester/src/: main.cpp
conan-recipe/: conanfile.py  test.bat
conan-recipe/test_package/: CMakeLists.txt  example.cpp
include/quadrature/: Gaussian.h  quadrature.h
projects/quadrature/include/quadrature/: Gaussian.h  quadrature.h
projects/tester/: CMakeLists.txt
projects/tester/source/: main.cpp
test_package/: example.cpp
